--- a/gamesearch/index.html
+++ b/gamesearch/index.html
@@ -98,7 +98,7 @@
 		<input type="checkbox" name="adminToggle" class="adminToggle" />
 		<a class="adminButton" href="#!"><i class="material-icons">lightbulb</i></a>
 		<div class="adminButtons">
-			<a href="https://github.com/IdleEndeavor/gamesearch" title="GitHub"><i class="material-icons">code</i></a>
+			<a href="https://github.com/OshekharO/Search-Engine" title="GitHub"><i class="material-icons">Owner</i></a>
 			</div>
 	</div>
 
