--- a/softwaresearch/index.html
+++ b/softwaresearch/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Rave Software Search Engine</title>
+	<title>Software Search Engine</title>
 
 	<!-- Favicon Import -->
 	<link rel="icon" type="text/css" href="img/favicon.png">
@@ -27,54 +27,9 @@
 	<noscript> 
 		<div id="noscript-warning">Rave Software Search uses Javascript to provide its search results. Kindly enable Javascript on your browser and reload the page to restore usability.</div>
 	</noscript>
-	<div class="sharemobile">
-		<div class="share-button-mobile">
-			<a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Fravegamesearch.pages.dev&text=Rave%20Game%20Search:%20http%3A%2F%2Fravegamesearch.pages.dev" target="_blank" title="Tweet"><img alt="Tweet" src="img/social-icons/Twitter.png" /></a>
-			<a href="http://www.tumblr.com/share?v=3&u=http%3A%2F%2Fravegamesearch.pages.dev&quote=Rave%20Game%20Search&s=" target="_blank" title="Post to Tumblr"><img alt="Post to Tumblr" src="img/social-icons/Tumblr.png" /></a>
-			<a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fravegamesearch.pages.dev&media=https://ravegamesearch.pages.dev/img/ravesearch-homepage-pic.png&description=An%20adaptation%20of%20the%20r%2Fpiracy%20Megathread.%20Rave%20Game%20Search%20helps%20you%20find%20free%20and%20safe%20download%20links%20to%20your%20favourite%20video%20games%20in%20a%20fast%20and%20easy%20to%20use%20UI." target="_blank" title="Pin it"><img alt="Pin it" src="img/social-icons/Pinterest.png" /></a>
-			<a href="http://www.reddit.com/submit?url=http%3A%2F%2Fravegamesearch.pages.dev&title=Rave%20Game%20Search" target="_blank" title="Submit to Reddit"><img alt="Submit to Reddit" src="img/social-icons/Reddit.png" /></a>
-			<a href="mailto:?subject=Rave%20Game%20Search&body=An%20adaptation%20of%20the%20r%2Fpiracy%20Megathread.%20Rave%20Game%20Search%20helps%20you%20find%20free%20and%20safe%20download%20links%20to%20your%20favourite%20video%20games%20in%20a%20fast%20and%20easy%20to%20use%20UI.:%20http%3A%2F%2Fravegamesearch.pages.dev" target="_blank" title="Send email"><img alt="Send email" src="img/social-icons/Email.png" /></a>
-		</div>
-	</div>
-
 <body>
 
-<!-- Preloader -->
-	<div class="preloader_bg">
-		<div class="preloader"></div>
-	</div>
-
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script>
-		setTimeout(function(){
-			$('.preloader_bg').fadeToggle();
-		}, 1500);
-	</script>
-
-<!-- Slideout Menu -->
-	<input type="checkbox" id="slide" name="" value=""/>
-	<div class="container">
-		<label for="slide" class="toggle">☰</label>
-		<nav class="sidebar">
-			<ul>
-				<img src="img/favicon.png" onclick="location.href='index.html';">
-				<h5 id="foundcounterno" class="count">0</h5>
-				<h5 id="foundcounter">Software Found</h5>
-				<h4>Copyright <script type="text/javascript">document.write(new Date().getFullYear());</script><br>IdleEndeavor</h4>
-			</ul>
-		</nav>
-	</div>
-	<script type="text/javascript">
-		function updateCounter() {
-		    fetch('https://api.countapi.xyz/update/ravesoftwaresearch/ravesoftwaresearch/?amount=1')
-		        .then(res => res.json())
-		        .then(data => counterElement.innerHTML = data.value)
-		}
-
-		updateCounter()
-
-		counterElement = document.getElementsByClassName('count')[0];
-	</script>
 
 <!-- Search Box -->
 	<div class="maindiv">
@@ -100,15 +55,6 @@
 		</script>
 		<gcse:search class="searchbox"></gcse:search>  
 		
-	</div>
-        
-<!-- FAB Wheel -->
-	<div class="adminActions">
-		<input type="checkbox" name="adminToggle" class="adminToggle" />
-		<a class="adminButton" href="#!"><i class="material-icons">lightbulb</i></a>
-		<div class="adminButtons">
-			<a href="https://github.com/OshekharO/" title="GitHub"><i class="material-icons">Maintainer</i></a>
-	</div>
 	</div>
 
 <!-- Engine Switcher -->
