--- a/Lightnovel/index.html
+++ b/Lightnovel/index.html
@@ -47,4 +47,12 @@
       <gcse:search class="searchbox"></gcse:search>
     </div>
   </body>
+<script
+  src="https://cdn.jsdelivr.net/gh/tuhinpal/contact-form@master/src/contact-form.min.js"
+  id="contactform"
+  error_text="Error Message Not Sent"
+  success_text="Message Sent Successfully"
+  disable_waittime="true"
+  form_worker_url="#"
+></script>
 </html>
