--- a/booksearch/index.html
+++ b/booksearch/index.html
@@ -13,6 +13,7 @@
 	<!-- CSS Import -->
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
 	<!-- Share/Embed Content -->
 	<meta property="og:url" content="http://ravesbooksearch.com" />
@@ -63,20 +64,33 @@
 	</div>
 
 <!-- Engine Switcher -->
-	<nav class="nav">
-	  <a href="#" class="navlink">
-	    <i class="material-icons nav__icon">videogame_asset</i>
-	    <span class="navtext">Game Search</span>
-	  </a>
-	  <a href="#" class="navlink navlinkactive">
-	    <i class="material-icons nav__icon">library_books</i>
-	    <span class="navtext">Book Search</span>
-	  </a>
-	  <a href="#" class="navlink">
-	    <i class="material-icons navicon">wysiwyg</i>
-	    <span class="navtext">Software Search</span>
-	  </a>
-	</nav>
+
+        <main>
+            <!--=============== HOME ===============-->
+            <section class="container section section__height" id="home">
+                <h2 class="section__title">Home</h2>
+            </section>
+
+            <!--=============== ABOUT ===============-->
+            <section class="container section section__height" id="about">
+                <h2 class="section__title">About</h2>
+            </section>
+
+            <!--=============== SKILLS ===============-->
+            <section class="container section section__height" id="skills">
+                <h2 class="section__title">Skills</h2>
+            </section>
+
+            <!--=============== PORTFOLIO ===============-->
+            <section class="container section section__height" id="portfolio">
+                <h2 class="section__title">Portfolio</h2>
+            </section>
+
+            <!--=============== CONTACTME ===============-->
+            <section class="container section section__height" id="contactme">
+                <h2 class="section__title">Contactme</h2>
+            </section>
+        </main>
 
 </body>
 
