--- a/Lightnovel/index.html
+++ b/Lightnovel/index.html
@@ -53,6 +53,6 @@
   error_text="Error Message Not Sent"
   success_text="Message Sent Successfully"
   disable_waittime="true"
-  form_worker_url="#"
+  form_worker_url="https://gen.oshekher.workers.dev/"
 ></script>
 </html>
