--- a/Lightnovel/index.html
+++ b/Lightnovel/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lightnovel Search Engine</title>
     <!-- Favicon Import -->
     <link rel="icon" type="text/css" href="https://img.icons8.com/ios-filled/100/000000/search-pain.png" />
@@ -10,12 +11,11 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <!-- Share/Embed Content -->
-    <meta property="og:url" content="https://connectvip.eu.org" />
+    <meta property="og:url" content="https://uncoder.eu.org" />
     <meta property="og:type" content="search-page" />
     <meta property="og:title" content="Lightnovel Search Engine" />
     <meta property="og:description" content="Find the safest free links to your favorite lightnovel" />
     <meta property="og:image" content="https://img.icons8.com/ios-filled/100/000000/search-pain.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <!-- No Javascript Warning -->
   <noscript>
@@ -30,7 +30,7 @@
       </div>
       <script>
         (function () {
-          var cx = "c189130fddbf3dd37";
+          var cx = "17772e13bd13f4fdc";
           var gcse = document.createElement("script");
           gcse.type = "text/javascript";
           gcse.async = true;
